# intellegent_document_processor

./: .env  README.md  idp.db  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  document.py  schema.py
app/routers/: __init__.py  dashboard.py  documents.py  erp.py  schemas.py
app/services/: __init__.py  feedback_service.py  llm_service.py  ocr_service.py  pipeline.py  table_service.py
specs/: IDG_ERP_Integration_Spec_v1.docx  IDG_Functional_Spec_v1.docx  IDG_Technical_Spec_v1.docx
ui/: api_client.py  app.py  cached_api.py  components.py
ui/.streamlit/: config.toml
ui/pages/: 1_Documents.py  2_Schema_Builder.py  3_Dashboard.py  4_Analytics.py
